<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:background="@color/white">

    <ImageView
        android:id="@+id/imageViewStatusIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_32"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_success" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_24"
        android:layout_marginTop="@dimen/spacing_24"
        android:layout_marginEnd="@dimen/spacing_24"
        android:gravity="center"
        android:textColor="@color/colorPrimaryText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewStatusIcon"
        tools:text="@string/label_title" />

    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_8"
        android:layout_marginTop="@dimen/spacing_24"
        android:layout_marginEnd="@dimen/spacing_8"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/spacing_4"
        android:textColor="@color/colorSecondaryText"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/closeTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        app:layout_constraintVertical_chainStyle="spread_inside"
        tools:text="@string/label_message" />

    <TextView
        android:id="@+id/closeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_36"
        android:layout_marginBottom="@dimen/spacing_20"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="@dimen/spacing_12"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMessage"
        tools:text="@string/label_action" />

</androidx.constraintlayout.widget.ConstraintLayout>